# mediciner

./: README.md  build.gradle  config.gradle  settings.gradle
CallKit/: build.gradle
CallLib/: build.gradle
IMKit/: build.gradle
IMLib/: AndroidManifest.xml
app/: build.gradle
app/src/androidTest/java/com/elink/health/mediciner/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/one/: CMakeLists.txt  common.h  test.c
app/src/main/cpp/two/: CMakeLists.txt  compress.c
app/src/main/java/com/elink/health/mediciner/: MainActivity.java
app/src/main/java/com/elink/health/mediciner/api/: Api.java  ApiService.java
app/src/main/java/com/elink/health/mediciner/app/: MobApplication.java
app/src/main/java/com/elink/health/mediciner/base/: BaseAction.java
app/src/main/java/com/elink/health/mediciner/db/: Test.java
app/src/main/java/com/elink/health/mediciner/ui/: ChatActivity.java  ConversationActivity.java
app/src/main/java/com/elink/health/mediciner/utils/: EncryptAndDecrypt.java  ImageCompress.java  SecurityUtil.java  SharedPreferencesUtil.java
app/src/main/java/com/elink/health/mediciner/utils/json/: JsonMananger.java
app/src/main/res/layout/: activity_chat.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/elink/health/mediciner/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sticker/: build.gradle
